--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ Django==5.1.6
 gunicorn==23.0.0
 packaging==24.2
 pillow==11.1.0
+psycopg2-binary==2.9.10
 PyMySQL==1.1.1
 python-decouple==3.8
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
 whitenoise==6.9.0
