--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ certifi==2025.1.31
 cloudinary==1.42.2
 dj-database-url==2.3.0
 Django==5.1.6
+django-ckeditor==6.7.2
+django-js-asset==3.1.2
 gunicorn==23.0.0
 packaging==24.2
 pillow==11.1.0
