--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,24 @@
 asgiref==3.8.1
 certifi==2025.1.31
+charset-normalizer==3.4.1
 cloudinary==1.42.2
 dj-database-url==2.3.0
 Django==5.1.6
 django-ckeditor==6.7.2
 django-js-asset==3.1.2
 gunicorn==23.0.0
+idna==3.10
+imagekitio==4.1.0
 packaging==24.2
 pillow==11.1.0
 psycopg2-binary==2.9.10
 PyMySQL==1.1.1
 python-decouple==3.8
+requests==2.32.3
+requests-toolbelt==0.10.1
 six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
 tzdata==2025.1
-urllib3==2.3.0
+urllib3==1.26.20
 whitenoise==6.9.0
