--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,52 @@
+annotated-types==0.7.0
+anyio==4.9.0
 asgiref==3.8.1
 boto3==1.37.37
 botocore==1.37.37
 certifi==2025.1.31
 charset-normalizer==3.4.1
 cloudinary==1.42.2
+deprecation==2.1.0
 dj-database-url==2.3.0
 Django==5.1.6
 django-ckeditor==6.7.2
 django-js-asset==3.1.2
 django-storages==1.14.6
+gotrue==2.12.3
 gunicorn==23.0.0
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.28.1
+hyperframe==6.1.0
 idna==3.10
 imagekitio==4.1.0
 jmespath==1.0.1
 packaging==24.2
 pillow==11.1.0
+postgrest==1.1.1
 psycopg2-binary==2.9.10
+pydantic==2.11.7
+pydantic_core==2.33.2
+PyJWT==2.10.1
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
+realtime==2.5.3
 requests==2.32.3
 requests-toolbelt==0.10.1
 s3transfer==0.11.5
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
-typing_extensions==4.12.2
+storage3==0.12.0
+StrEnum==0.4.15
+supabase==2.16.0
+supafunc==0.10.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
 tzdata==2025.1
 urllib3==1.26.20
+websockets==15.0.1
 whitenoise==6.9.0
